--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>FAQ collapse</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-   
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'> 
+    <link 
+  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
+  rel="stylesheet"  type='text/css'>
 </head>
 <body>
-    
+    <h1>Frequently Asked Questions</h1>
+    <div class="faq-container">
+        <div class="faq active">
+            <h3 class="faq-title">
+                Why shouldn't we trust atoms?
+            </h3>
+            <p class="faq-text">
+                They make up everything
+            </p>
+            <button>
+                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-times"></i>
+            </button>
+        </div>
+    </div>
 
     <script src='script.js'></script>
 </body>
