--- a/index.html
+++ b/index.html
@@ -25,6 +25,42 @@
                 <i class="fa fa-times"></i>
             </button>
         </div>
+        <div class="faq">
+            <h3 class="faq-title">
+                Why shouldn't we trust atoms?
+            </h3>
+            <p class="faq-text">
+                They make up everything
+            </p>
+            <button>
+                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-times"></i>
+            </button>
+        </div>
+        <div class="faq">
+            <h3 class="faq-title">
+                Why shouldn't we trust atoms?
+            </h3>
+            <p class="faq-text">
+                They make up everything
+            </p>
+            <button>
+                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-times"></i>
+            </button>
+        </div>
+        <div class="faq">
+            <h3 class="faq-title">
+                Why shouldn't we trust atoms?
+            </h3>
+            <p class="faq-text">
+                They make up everything
+            </p>
+            <button>
+                <i class="fa fa-chevron-down"></i>
+                <i class="fa fa-times"></i>
+            </button>
+        </div>
     </div>
 
     <script src='script.js'></script>
