--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="faq-text">
                 They make up everything
             </p>
-            <button>
+            <button class="faq-toggle">
                 <i class="fa fa-chevron-down"></i>
                 <i class="fa fa-times"></i>
             </button>
@@ -32,7 +32,7 @@
             <p class="faq-text">
                 They make up everything
             </p>
-            <button>
+            <button class="faq-toggle">
                 <i class="fa fa-chevron-down"></i>
                 <i class="fa fa-times"></i>
             </button>
@@ -44,7 +44,7 @@
             <p class="faq-text">
                 They make up everything
             </p>
-            <button>
+            <button class="faq-toggle">
                 <i class="fa fa-chevron-down"></i>
                 <i class="fa fa-times"></i>
             </button>
@@ -56,7 +56,7 @@
             <p class="faq-text">
                 They make up everything
             </p>
-            <button>
+            <button class="faq-toggle">
                 <i class="fa fa-chevron-down"></i>
                 <i class="fa fa-times"></i>
             </button>
